@startuml Exo6

skinparam classAttributeIconSize 0

class Sim {
  # {static} userVars: Map<String, number | Semaphore>
  # {static} userAlgos: Map<String, String>
  # {static} ui: Map<String, HTMLElement>
  
  # {static} chan: Changement
  # {static} voie1: Array<Traversee1>
  # {static} voie2: Array<Traversee2>
  
  + {static} start()
  + {static} stop()
  - {static} setup()
  - {static} redraw()
}

class Algorithme {
  - userAlgo: String
  - orderVec: Array<String>

  + p(x: Semaphore)
  + v(x: Semaphore)
  + sleep(secs: number)

  - run(): void
  ~ getWaitVec(): Array<number>
  - {static} awaitifyThat(code: String): String
  - {static} parseOrderVector(code: String): Array<String>
}


class Changement {}

class Traversee {
  # name: string
  - color: String
  - type: String
  
  + circuler()
  - assertNoCollision()
  - destroy()
}
class Traversee1 {}
class Traversee2 {}

class SillySemaphore {
  - permits: number
  - queue: Array<Object>
  
  + acquire(acquirer: Object): Promise<void>
  + release(acquirer: Object): Promise<void>
  + getPosition(acquirer: Object): number
  + die(): void
}

Sim *--right Algorithme
Algorithme ..> SillySemaphore
Algorithme <|-- Changement
Algorithme <|-- Traversee
Traversee <|-- Traversee1
Traversee <|-- Traversee2

@enduml
